arreglado bugm, ahora si funciona corerctamente la copia de imagenes y muestreo de estas